# atheris

./: .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  __init__.py  atheris.cc  atheris.h  atheris_no_libfuzzer  atheris_no_libfuzzer.py  core.cc  coverage_test.py  fuzzed_data_provider.cc  fuzzed_data_provider.h  fuzzed_data_provider_test.py  hall_of_fame.md  hooking.md  import_hook.py  installing_atheris_on_arm.md  libfuzzer.cc  macros.h  native_extension_fuzzing.md  pyproject.toml  release_instructions.md  run_tests.sh  setup.cfg  setup.py  tracer.cc  tracer.h  using_sanitizers.md  util.cc  util.h  util_test.cc  utils.py
.github/workflows/: builds.yaml  lint.yaml  linux-wheels.yaml  release.yaml  wheels.yaml
.kokoro/: continuous.cfg  kokoro_test.sh  presubmit.cfg
atheris/: __init__.py  import_hook.py  instrument_bytecode.py  utils.py  version_dependent.py
contrib/libprotobuf_mutator/: BUILD.bazel  MANIFEST.in  README.md  WORKSPACE  proto_fuzz_test.py  pyproject.toml  setup.py
contrib/libprotobuf_mutator/atheris_libprotobuf_mutator/: __init__.py  helpers.py  mutator.cc  proto_fuzz_test.py
contrib/libprotobuf_mutator/deployment/: deploy_pypi.sh
contrib/libprotobuf_mutator/example_fuzzers/: example_proto_fuzzer.py
deployment/: Dockerfile  Dockerfile.aarch64  build_wheels.sh  build_wheels_mac.sh  deploy_pypi.sh
example_fuzzers/: custom_mutator_example.py  example_library.py  fuzzing_example.py  google3_fuzzing_example.py  regex_fuzzing_example.py  str_fuzzing_example.py
example_fuzzers/idna_fuzzer/: idna_acceptance_fuzzer.py  idna_uts46_fuzzer.py
example_fuzzers/json_fuzzer/: build_install_ujson.sh  ujson_fuzzer.py  (+2 more)
setup_utils/: check_libfuzzer_version.sh  find_libfuzzer.py  find_libfuzzer.sh  fuzzer_run_driver_wrapper.cc  merge_libfuzzer_sanitizer.sh  upgrade_libfuzzer.sh
src/: __init__.py  clean_instrument_bytecode.py  coverage_g3test.py  coverage_test.py  coverage_test_helper.py  custom_crossover_fuzz_test.py  custom_mutator_and_crossover_fuzz_test.py  custom_mutator_fuzz_test.py  function_hooks.py  fuzz_test.py  fuzz_test_lib.py  fuzzed_data_provider_test.py  google3_coverage_test.py  hook-atheris.py  import_hook.py  instrument_all_test.py  instrument_bytecode.py  instrument_bytecode_test.py  pyinstaller_coverage_test.py  regex_coverage_test.py  regex_match_generation_test.py  str_hook_test.py  utils.py  version_dependent.py  version_dependent_test.py
(+40 files in other folders)
