load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "_mutator",
    srcs = [
        "atheris_libprotobuf_mutator/mutator.cc",
    ],
    deps = [
        "@com_google_libprotobuf_mutator//:libprotobuf_mutator",
        "@com_google_pybind11_protobuf//pybind11_protobuf:native_proto_caster",
    ],
)
